# polymarket-backtest

./: README.md  pyproject.toml
docs/: README_CN.md
polymarket_backtest/: __init__.py
polymarket_backtest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
polymarket_backtest/api/: __init__.py  clob.py  gamma.py  models.py
polymarket_backtest/backtest/: __init__.py  metrics.py
polymarket_backtest/data/: __init__.py  loader.py
polymarket_backtest/data/sample/: flash_crash_summary.csv  flash_crash_trades.csv  hedge_arb_trades.csv
polymarket_backtest/stats/: __init__.py  bootstrap.py  hypothesis.py  simulation.py
