[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-backtest"
version = "0.1.0"
description = "Polymarket API wrapper and strategy backtesting metrics toolkit"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
keywords = ["polymarket", "prediction-market", "backtest", "trading", "quantitative"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://github.com/yourname/polymarket-backtest"
Repository = "https://github.com/yourname/polymarket-backtest"
Issues = "https://github.com/yourname/polymarket-backtest/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["polymarket_backtest*"]

[tool.setuptools.package-data]
"polymarket_backtest.data.sample" = ["*.csv"]
